--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body class="page">
+    <header class="header centered-block">
+      <a href="#" lang="en" class="header__link centered-block">Vasya</a>
+    </header>
+    <nav class="menu centered-block page__menu">
+      <a href="#" class="menu__link menu__link_active"
+        >Первые шаги в HTML и CSS</a
+      >
+      <a href="#" class="menu__link">Библиотеки JavaScript</a>
+      <a href="#" class="menu__link">Практика HTML, CSS и JavaScript</a>
+    </nav>
+  </body>
 </html>
